Clean up directory structure

--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 		</style>
 	</head>
 	<body>
-		<script type="text/javascript" src="three.min.js"></script>
-		<script type="text/javascript" src="svg.min.js"></script>
-		<script type="text/javascript" src="svg.draggable.min.js"></script>
-		<script type="text/javascript" src="dodecahedron.js"></script>
-		<script type="text/javascript" src="grid.js"></script>
-		<script type="text/javascript" src="sheet.js"></script>
+		<script type="text/javascript" src="js/three.min.js"></script>
+		<script type="text/javascript" src="js/svg.min.js"></script>
+		<script type="text/javascript" src="js/svg.draggable.min.js"></script>
+		<script type="text/javascript" src="js/dodecahedron.js"></script>
+		<script type="text/javascript" src="js/grid.js"></script>
+		<script type="text/javascript" src="js/sheet.js"></script>
 		<script type="text/javascript">
 
 			var wrapper = document.createElement("div");
